# OpenRalph

./: .gitignore  PHASE3_1_FIX_REPORT.md  PHASE3_1_FOLLOWUP_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  README.md  pyproject.toml
old_docs/: ADAPTER_RUNTIME_VERIFICATION.md  REVIEW_P1_P2.md
src/: app.tsx  index.ts  init.ts  loop.ts  plan.ts  state.ts  verifier.ts
src/adapters/: codex.ts  opencode-run.ts
src/components/: right-panel.tsx  tui-types.ts
src/lib/: lock.ts  paths.ts
src/lib/config/: schema.ts
src/openralph_py/: __main__.py  cli.py  loop.py  plan.py  progress.py  prompt.py  result_contract.py  selector.py  state.py  workspace.py
src/openralph_py/adapters/: __init__.py  base.py  codex.py  copilot.py  execution.py  opencode.py  registry.py
src/pty/: spawn.ts  types.ts
src/templates/: agents-template.ts  plugin-template.ts
src/ui/: operator-state.ts
tests/: conftest.py  test_adapter_codex.py  test_adapter_copilot.py  test_adapter_opencode.py  test_adapter_registry.py  test_cli.py  test_loop.py  test_phase3_loop.py  test_plan.py  test_progress.py  test_result_contract.py  test_selector.py  test_state.py
tests/helpers/: temp-files.ts
tests/unit/: config-schema.test.ts  init.test.ts  loop.test.ts  opencode-run.test.ts  operator-state.test.ts  verifier.test.ts
